src/SharpBlogX.Web/wwwroot/css/app.css
/* ... */
.nickname {
    font-weight: normal;
    font-size: 2em;
}
.links a {
    padding: 0 5px;
}
.links a:hover {
    background-color: transparent;
}
.links .iconfont {
    font-size: 2em;
}
.post-wrap {
    position: relative;
    margin: 0 auto;
    padding-top: 2rem;
    width: 100%;
    max-width: 1200px;
}
.archive-item-date {
    float: right;
    color: #a9a9b3;
    text-align: right;
}
.dark-theme .archive-item-date {
    color: #87878d;
}
.post-wrap .categories-card {
    display: flex;
    margin: 0 auto;
    margin-top: 1em;
    padding: 0 2.5em;
    line-height: 1.6em;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    flex-wrap: wrap;
}
.post-wrap .categories-card .card-item {
    position: relative;
    display: flex;
    width: 50%;
    text-align: left;
    font-size: 14px;
    align-items: flex-start;
}
.post-wrap .categories-card .card-item .categories {
    overflow: hidden;
}
.categories h3 {
    display: inline-block;
}
.categories span {
    float: right;
    padding-right: 1em;
}
.categories .more-post-link {
    float: right;
}
.tag-cloud-tags {
    margin: 10px 0;
    padding-top: 2em;
}
.tag-cloud-tags a {
    position: relative;
    display: inline-block;
    margin: 5px 10px;
    word-wrap: break-word;
    transition-timing-function: ease-out;
    transition-duration: 0.3s;
    transition-property: transform;
}
.tag-cloud-tags a:active, .tag-cloud-tags a:focus, .tag-cloud-tags a:hover {
    color: #5A9600;
    transform: scale(1.1);
}
.dark-theme .tag-cloud-tags a:active, .dark-theme .tag-cloud-tags a:focus, .dark-theme .tag-cloud-tags a:hover {
    color: #fff;
}
.tag-cloud-tags a small {
    margin: 0 0.3em;
    color: #a9a9b3;
}
.dark-theme .tag-cloud-tags a small {
    color: #fff;
}
.page {
    padding-top: 0;
}
.page .post-content {
    margin: 0;
    padding-top: 0;
}
.post-wrap p {
    margin: 0.5em 0 0.5em 0;
    font-size: 1em;
}
.post-wrap .post-header h1 {
    margin: 0 !important;
}
.post-wrap .post-title {
    font-size: 2em;
    line-height: 1.5em;
}
.post-wrap .eror-tip {
    margin-top: 250px;
    text-align: center;
    line-height: 1.5em;
}
.post-wrap .post-meta {
    color: rgba(85, 85, 85, 0.529) !important;
}
.dark-theme .post-wrap .post-meta {
    color: #87878d !important;
}
.post-wrap .post-meta a {
    color: #000;
}
.dark-theme .post-wrap .post-meta a {
    color: #eee;
}
.post-wrap .post-meta a:hover {
    color: #5A9600;
}
.dark-theme .post-wrap .post-meta a:hover {
    color: #fff;
}
.post-content {
    padding: 0 !important;
    padding-top: 2rem !important;
    text-align: justify !important;
    font-size: 16px;
}
.post-copyright {
    margin-top: 2rem;
    border-top: 1px solid #e8e8e8;
    border-bottom: 1px solid #e8e8e8;
}
.post-copyright a {
    color: #000;
}
.dark-theme .post-copyright a {
    color: #eee;
}
.post-copyright a:hover {
    color: #5A9600;
}
.dark-theme .post-copyright a:hover {
    color: #fff;
}
.post-copyright .copyright-item {
    margin: 5px 0;
}
.post-copyright .lincese {
    font-weight: bold;
}
.dark-theme .post-copyright {
    border-top: 1px solid #909196;
    border-bottom: 1px solid #909196;
}
.post-tags {
    display: flex;
    padding: 1rem 0 1rem;
    justify-content: space-between;
}
.post-nav {
    display: flex;
    justify-content: space-between;
}
.post-nav a.prev, .post-nav a.next {
    font-weight: 600;
    font-size: 16px;
    transition-timing-function: ease-out;
    transition-duration: 0.3s;
    transition-property: transform;
}
.post-nav a.prev {
    float: left;
}
.post-nav a.prev::before {
    margin-right: 0.5em;
    content:"<";
}
.post-nav a.prev:hover {
    transform: translateX(-4px);
}
.post-nav a.next {
    float: right;
}
.post-nav a.next::after {
    margin-left: 0.5em;
    content:">";
}
.post-nav a.next:hover {
    transform: translateX(4px);
}
.post-nav a.prev::before, .post-nav a.next::after {
    font-weight: bold;
}
.tag:not(:last-child) a::after {
    content:" / ";
}
/* ... */

